--- a/Ecommerce/exercicio01.html
+++ b/Ecommerce/exercicio01.html
@@ -51,7 +51,7 @@
       }
       //criar a instancia ecommerce
       const ecommerce = new Ecommerce();
-      //criar objetos, com id, nome e preço
+      //criar objetos, com id, nome e preço.
 
       const product1 = { id: 1, name: "Bone", price: 30.99 };
       const product2 = { id: 2, name: "Tshirt", price: 55.99 };
